[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
install_requires = 
    ensure==1.0.2
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=8.2.2
    mypy>=1.10.0
    flake8>=7.0.0
    tox>=4.15.1
    black>=24.4.2

[options.package_data]
test_package = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py